--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,6 @@ navbar{
   height: 130px;
   border: 20px;
   overflow: hidden;
-  style='text-align:center;
-  style='left:50%;
+  text-align:center;
+  left:50%;
 }
